First recipe page structure
Write a description, ingredient list, and steps to follow for "Lasagna".
Use ul for the ingredients section and ol for the steps section.
Make an images folder and link an image to recipe html.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,44 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">Return to Recipes</a>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.jpg" alt="Lasagna bolognese" height="300px" width="350px">
+    <h2>Delicious italian dish to share with the whole family</h2>
+    <p><strong>Lasagna</strong>, is a type of pasta, made of very wide, flat sheets. 
+        It is made of stacked layers of lasagna pasta alternating 
+        with fillings such as ground meats,tomato sauce, vegetables, 
+        cheeses and spices.</p> 
+    <p> When assembled, it is then baked in an oven, 
+        which results in baked pasta goodness!</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Dry Lasagna Pasta Sheets</li>
+        <li>Bolognese Sauce</li>
+        <li>Ricotta Cheese</li>
+        <li>Spinach</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+        <li>Basil</li>
+        <li>Low Moisture Mozzarella Cheese</li>
+        <li>Grated Parmesan Cheese</li>
+    </ul>
+    <h2>Steps to Follow</h2>
+    <ol>
+        <li>Preheat your oven to 190º Celsius (375º Fahrenheit)</li>
+        <li>Boil your pasta sheets according to pack specifications</li>
+        <li>In a separate pot, add water and a pinch of salt</li>
+        <li>Let the water boil and add your spinach and boil for 4 to 5 minutes</li>
+        <li>Rinse spinach in cold water to cool down</li>
+        <li>Chop spinach in a cutting board until fine</li>
+        <li>In a separate bowl, add the cut spinach, the ricotta and mix</li>
+        <li>Add a layer of sauce to the bottom of an oven safe pan</li>
+        <li>Layer your pasta sheets, sauce, ricotta, mozzarella and repeat</li>
+        <li>Top with a final layer of mozzarella and grated parmesan cheese</li>
+        <li>Place in the oven for 30 minutes</li>
+        <li>Let rest for an hour, top with basil and serve</li>
+    </ol>
+    <a href="../index.html">Return to Recipes</a>
 </body>
 </html>
