Add two more recipes
Add bolognese and brownie html with their images, ingredients and steps.
Fix a typo in lasagna html
Make index page an unordered list for recipe html's

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,10 +9,10 @@
     <a href="../index.html">Return to Recipes</a>
     <h1>Lasagna</h1>
     <img src="../images/lasagna.jpg" alt="Lasagna bolognese" height="300px" width="350px">
-    <h2>Delicious italian dish to share with the whole family</h2>
+    <h2>Delicious italian dish to share with the whole family!</h2>
     <p><strong>Lasagna</strong>, is a type of pasta, made of very wide, flat sheets. 
         It is made of stacked layers of lasagna pasta alternating 
-        with fillings such as ground meats,tomato sauce, vegetables, 
+        with fillings such as ground meats, tomato sauce, vegetables, 
         cheeses and spices.</p> 
     <p> When assembled, it is then baked in an oven, 
         which results in baked pasta goodness!</p>
@@ -20,7 +20,7 @@
     <h2>Ingredients</h2>
     <ul>
         <li>Dry Lasagna Pasta Sheets</li>
-        <li>Bolognese Sauce</li>
+        <li><a href="bolognese.html">Bolognese Sauce</a></li>
         <li>Ricotta Cheese</li>
         <li>Spinach</li>
         <li>Salt</li>
