--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Return to Recipes</a>
     <h1>Brownie</h1> 
-    <img src="../images/brownie.jpg" alt="Chocolate brownie" height="300px" width="350px">
+    <img src="../assets/images/brownie.jpg" alt="Chocolate brownie" height="300px" width="350px">
     <h2>Fudgy chocolate brownie to delight your sweet tooth!</h2>
     <p>A <strong>brownie</strong>, is a chocolate baked confection. Brownies come in a variety of
     forms and may be either fudgy of cakey, depending on their density, they may also include nuts,
