--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Return to Recipes</a>
     <h1>Bolognese</h1> 
-    <img src="../images/bolognese.jpg" alt="Bolognese sauce" height="300px" width="350px">
+    <img src="../assets/images/bolognese.jpg" alt="Bolognese sauce" height="300px" width="350px">
     <h2>Incredible italian sauce ideal for any pasta dish!</h2>
     <p><strong>Bolognese sauce</strong>, also known as <em>ragù bolognese</em>, is a meat-based
     sauce in italian cuisine customarily used to prepare <a href="lasagna.html">Lasagna</a>.</p> 
