--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Return to Recipes</a>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="Lasagna bolognese" height="300px" width="350px">
+    <img src="../assets/images/lasagna.jpg" alt="Lasagna bolognese" height="300px" width="350px">
     <h2>Delicious italian dish to share with the whole family!</h2>
     <p><strong>Lasagna</strong>, is a type of pasta, made of very wide, flat sheets. 
         It is made of stacked layers of lasagna pasta alternating 
