--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brownie Recipe</title>
+    <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
-    <a href="../index.html">Return to Recipes</a>
     <h1>Brownie</h1> 
-    <img src="../assets/images/brownie.jpg" alt="Chocolate brownie" height="300px" width="350px">
-    <h2>Fudgy chocolate brownie to delight your sweet tooth!</h2>
+    <a href="../index.html">Return to Recipes</a>
+    <img src="../assets/images/brownie.jpg" alt="Chocolate brownie">
+    <h2 style="text-align: center;">Fudgy chocolate brownie to delight your sweet tooth!</h2>
     <p>A <strong>brownie</strong>, is a chocolate baked confection. Brownies come in a variety of
     forms and may be either fudgy of cakey, depending on their density, they may also include nuts,
     frosting, chocolate chips, or other ingredients.</p> 
@@ -47,6 +48,6 @@
         <li>You will know it's done when the toothpick comes out slightly clean</li>
         <li>Let rest until it reaches room temperature, cut and serve</li>
     </ol>
-    <a href="../index.html">Return to Recipes</a>
+    <a href="#">Return to Top</a>
 </body>
 </html>
