--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
-    <a href="../index.html">Return to Recipes</a>
     <h1>Lasagna</h1>
-    <img src="../assets/images/lasagna.jpg" alt="Lasagna bolognese" height="300px" width="350px">
-    <h2>Delicious italian dish to share with the whole family!</h2>
+    <a href="../index.html">Return to Recipes</a>
+    <img src="../assets/images/lasagna.jpg" alt="Lasagna bolognese">
+    <h2 style="text-align: center;">Delicious italian dish to share with the whole family!</h2>
     <p><strong>Lasagna</strong>, is a type of pasta, made of very wide, flat sheets. 
         It is made of stacked layers of lasagna pasta alternating 
         with fillings such as ground meats, tomato sauce, vegetables, 
@@ -44,6 +45,6 @@
         <li>Place in the oven for 30 minutes</li>
         <li>Let rest for an hour, top with basil and serve</li>
     </ol>
-    <a href="../index.html">Return to Recipes</a>
+    <a href="#">Return to Top</a>
 </body>
 </html>
