--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <style>
+        ul {
+            display: flex;
+            list-style: none;
+            font-size: 20px;
+        }
+
+        li {
+            padding-left: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Odin Recipes</h1>
