--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bolognese Recipe</title>
+    <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
-    <a href="../index.html">Return to Recipes</a>
     <h1>Bolognese</h1> 
-    <img src="../assets/images/bolognese.jpg" alt="Bolognese sauce" height="300px" width="350px">
-    <h2>Incredible italian sauce ideal for any pasta dish!</h2>
+    <a href="../index.html">Return to Recipes</a>
+    <img src="../assets/images/bolognese.jpg" alt="Bolognese sauce">
+    <h2 style="text-align: center;">Incredible italian sauce ideal for any pasta dish!</h2>
     <p><strong>Bolognese sauce</strong>, also known as <em>ragù bolognese</em>, is a meat-based
     sauce in italian cuisine customarily used to prepare <a href="lasagna.html">Lasagna</a>.</p> 
     <p> Italian bolognese is a dish that requires different techniques and some time and preparation,
@@ -58,6 +59,6 @@
         <li>Add in your grated parmesan, heavy cream, fresh basil, salt and pepper (to taste) and mix well</li>
         <li>You can serve it immediately or you can let it cool and freeze it for future use!</li>
     </ol>
-    <a href="../index.html">Return to Recipes</a>
+    <a href="#">Return to Top</a>
 </body>
 </html>
